# perf-lab

./: .gitignore  .pre-commit-config.yaml  README.md  bench_runs.jsonl  main.py  main_mine.py  pyproject.toml
configs/: models.yaml
configs/runs/: baseline.yaml
src/llm_perf/: cli.py
src/llm_perf/backends/: base.py  hf.py  vllm.py
src/llm_perf/bench/: metrics.py  reporters.py  runner.py  runner_config.py  runner_min.py  timing.py
src/llm_perf/utils/: env.py  io.py
