[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-lab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "pre-commit>=4.5.1",
    "protobuf>=6.33.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typer>=0.21.1",
]

[project.scripts]
llm-perf = "llm_perf.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]